# braint

./: app.json  main.py  pyproject.toml
braint/: settings.py  tasks.py
static/: braint.js  calendar.js  navbar.css  navbar.js  portal.css  script.js  style.css  task-manager.js
templates/: calendar.html  change-password.html  index.html  login.html  register.html  settings.html
